fix author alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,12 @@
 }
 
 .author {
-	align-content: right;
+	text-align: right;
+}
+
+.p-author {
+	font-color: #333;
+	font-weight: bold;
 }
 
 .project-name {
